# cpp_notes

./: .clang-format  .clangd  .gitignore  .gitmodules  10_26__lambda_local_context.cpp  2024-07-18_0010_TILIR_BASICS_FULL.md  2024-08-08_0010_HolyBlackCat.md  2024-08-08_0020_Fedr.md  2024-08-09_0010_TILIR_MASTERS_FULL.md  2024-08-09_0020_TILIR_MASTERS_MINI.md  2024-08-10_0010_POLUKHIN.md  2024-08-12_0010_SERGEY_SLOTIN_FULL.md  2024-09-04_0300_Torjo_Boost_Asio.md  2024-09-09_0046_Sonmez_Soft_Skills.md  2024-09-10_1558_Profiling_Stuff.md  2024-09-12_0345_javidx9_Asio_On_Practice.md  2024-09-16_0230_vinnie_falco_boost_beast.md  2024-09-21_2314_robert_martin_clean_architecture.md  2024-09-22_0203_gregory_game_engine_arch.md  2024-09-23_0319_cppcon_good_talks.md  2024-09-25_0000_imran_linux_video_course.md  2024-09-27_1532_linux_in_action.md  2024-09-27_1537_shotts_linux_command_line.md  2024-09-27_1540_sergey_tyulenev_my_way_of_learning_technologies.md  2024-12-02_1952_notes_about_photo.md  BUILD.md  CHALLANGES.md  CMakeLists.txt  CMakePresets.json  HolyBlackCat.md  INBOX.md  LINKS.md  POLUKHIN.md  PROGRESS.md  README.md  SERGEY_SLOTIN_FULL.md  SUMMARY001.md  THEORY.md  THOUGHTS.md  TILIR_BASICS_MINI.md  (+7 more)
code/: algorithms_functors_basics.cpp  algorithms_labmda_in_class_body.cpp  algorithms_lambda_examples.cpp  algorithms_std_copy_backward_example.cpp  algorithms_std_copy_if_examples.cpp  algorithms_std_functions_type_erasure.cpp  algorithms_std_lower_bound_upper_bound.cpp  algorithms_std_mismatch_example.cpp  algorithms_std_reduce_and_std_accumulate.cpp  algorithms_std_rotate.cpp  algorithms_std_transform.cpp  algorithms_std_transform_zip.cpp  containers_iota_sort_always_less.cpp  containers_unordered_map_reserve.cpp  conteiners_forward_list_splice.cpp  conteiners_map_erase_by_value_problem.cpp  conteiners_set_lower_upper_bound.cpp  conteiners_unordered_map_bucket_iteration.cpp  diamond_problem_and_virtual_inheritance.cpp  exceptions_by_value.cpp  fedr_pazzle_002_deduce_this.cpp  fedr_pazzle_003_deduce_this.cpp  file_handle_unique_prt.cpp  inheritance_typeid_nullptr.cpp  meta_print_all_constexpr.cpp  meta_requires_requires_no_eval.cpp  meta_sfinae_problem.cpp  meta_vector_to_array.cpp  my_vector.cpp  raii_finally_labmda_to_replace_RAII.cpp  raii_movesem.cpp  raii_std_move_dangling_references_example.cpp  raii_try_block_for_ctor_init_list.cpp  template_ambiguity_002.cpp  template_ambiguity_003.cpp  template_cut_args.cpp  template_decltype_auto.cpp  template_enable_if.cpp  template_fold_examples.cpp  template_forward.cpp  (+2 more)
code/cppreference/: value_catergory.cpp
code/fedr/: fedr_pazzle_001_deduce_this.cpp  fedr_pazzle_002_deduce_this.cpp
code/holy_black_cat/: 10_10_using_benchmark.cpp  std_bind_front.cpp
code/kv/: common-model.cc  ocp-good.cc  srp-bad.cc  srp-good.cc
code/my/: asio_chat_client.cpp  asio_chat_server.cpp  class_with_no_ctor.cpp  crtp_pattern_example.cpp  deducing_this_for_operator.cpp  my_vector.cpp  size_of_class.cpp  string_find_test.cpp  string_test.cpp  sum_all_int.cpp
code/perf_linux/: perf_example_001.cpp  perf_example_002.cpp
code/thoughts/: rvalue_pass_as_lvalue_ref.cpp  vector_const_int_ref.cpp
code/tilir_basics/: algorithms_erase_remove_idiom.cpp  algorithms_functors_for_each.cpp  algorithms_lambda_closure_and_local_context.cpp  algorithms_std_all_of_any_of_none_of.cpp  algorithms_std_copy_backward_example.cpp  algorithms_std_function_target_type_name.cpp  algorithms_std_inclusive_scan_partial_sum.cpp  exception_with_multiple_inheritance.cpp  iterators_fibonachi_example.cpp  meta_concept_overload.cpp  meta_concepts.cpp  meta_factorial_sfinae.cpp  meta_fibonacci_sfinae.cpp  meta_logint_constexpr.cpp  meta_requires_requires.cpp  meta_sqrt_int_sfinae.cpp  meta_user_defined_literals.cpp  raii_copy_move_elision_test.cpp  template_ambiguity_001.cpp  template_declval.cpp  template_fold_examples.cpp  template_return_different_type_depends_on_value.cpp  template_specialisation_for_c_api.cpp
code/tilir_masters/: 01_10_side_effects.cpp  02_10_nth_power.cpp  02_14_nth_power_concepts.cpp  02_16_concepts_instead_of_typename.cpp  02_18_instantiation_rules.cpp  02_20_non_type_parameters.cpp  02_22_template_default_params.cpp  02_24_template_auto_type.cpp  02_26_chain_of_casts.cpp  03_10_class_spec_example.cpp  03_12_satters_trick.cpp  03_14_method_full_spec.cpp  03_15_default_id_traits.cpp  04_10_inline.cpp  04_12_odr_used.cpp  06_01_constinit.cpp  06_10_challange_math_trit_via_consteval.cpp  06_12_challange_math_array_size.cpp  06_14_challange_bitmask_logic_or.cpp  06_16_core_constant_expr.cpp  09_10_c-style-dot-dot-dot.cpp  09_12_variadic_templates.cpp  09_14_variadic_templates_empty_pack.cpp  10_10_std_invoke.cpp  10_12_std_invoke_fields.cpp  10_20_lambda_and_folds.cpp  10_22_lambda_carry_custom.cpp  10_24_lambda_local_context.cpp  10_28_lambda_perfect_forward_fail.cpp  10_30_lambda_perfect_forward_custom_wrapper.cpp  10_32_lambda_perfect_forward_tuple_custom.cpp  10_34_lambda_perfect_forward_forward_as_tuple.cpp  10_36_std_apply.cpp  10_38_std_any_type_erasure.cpp  10_40_std_variant.cpp  10_42_lambda_overloading.cpp  10_44_lambda_overloading_deduction_hint.cpp  10_46_std_function.cpp  10_50_deducing_this.cpp  (+49 more)
diags/: coroutines.drawio  javidx9_asio.drawio  torjo_boost_asio.drawio  vinnie_valco_boost_beast.drawio
notes/: 2024-07-18_0010_TILIR_BASICS_FULL.md  2024-07-18_0020_TILIR_BASICS_MINI.md  2024-08-08_0010_HolyBlackCat.md  2024-08-09_0010_TILIR_MASTERS_FULL.md  2024-08-10_0010_POLUKHIN.md  2024-09-04_0300_Torjo_Boost_Asio.md  2024-09-09_0046_Sonmez_Soft_Skills.md  2024-09-10_1558_Profiling_Stuff.md  2024-09-21_2314_robert_martin_clean_architecture.md  2024-09-23_0209_fluent_cpp_blog_notes.md  2024-09-25_1834_web_assembly.md  2024-09-27_1537_shotts_linux_command_line.md  2024-12-02_1952_notes_about_photo.md  2024-12-16_2032_drums.md  2024-12-18_1336_windbg_course.md
scripts/: infinite_runner.py  mermaid_pie_chart_generation.py  parse_deleaker_report.py  parse_progress_md_to_png_plot.py  vscode_tasks_generator.py
vagrant/: Vagrantfile
(+39 files in other folders)
